--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ bld/
 
 
 /.vs
+/bin/Debug/net6.0/appsettings.json
+/bin/Debug/net6.0/BookCrossingApp.dll
+/bin/Debug/net6.0/BookCrossingApp.pdb
+/bin/Debug/net6.0/BookCrossingApp.staticwebassets.runtime.json
