Users list block added, book history added,search bar added

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ bld/
 /bin/Debug/net6.0/BookCrossingApp.dll
 /bin/Debug/net6.0/BookCrossingApp.pdb
 /bin/Debug/net6.0/BookCrossingApp.staticwebassets.runtime.json
+/bin/Debug/net6.0/BookCrossingApp.exe
